k8s/base/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: gridlogger
spec:
  redirectScheme:
    scheme: https
    port: "443"
    permanent: true
