k8s/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gridlogger
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
    name: http
