k8s/base/firmware-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: firmware
  namespace: gridlogger
spec:
  selector:
    app: firmware
  ports:
  - port: 8081
    targetPort: 8081
    name: http
