k8s/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: gridlogger
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
