k8s/base/timescaledb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
  namespace: gridlogger
spec:
  selector:
    app: timescaledb
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
