k8s/base/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gridlogger-http
  namespace: gridlogger
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: svitlo.homes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /me
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
